stateDiagram-v2
    classDef currentPlace font-weight:bold,stroke-width:4px
    pending
    payment_processing
    payment_approved
    payment_failed
    inventory_check
    inventory_insufficient
    shipping
    delivered
    cancelled
    refunded
    pending --> payment_processing : process_payment
    payment_processing --> payment_approved : payment_success
    payment_processing --> payment_failed : payment_failure
    payment_failed --> payment_processing : retry_payment
    payment_approved --> inventory_check : check_inventory
    inventory_check --> shipping : inventory_available
    inventory_check --> inventory_insufficient : inventory_insufficient
    inventory_insufficient --> shipping : restock_and_ship
    shipping --> delivered : mark_delivered
    pending --> cancelled : cancel_pending
    payment_processing --> cancelled : cancel_payment_processing
    payment_approved --> cancelled : cancel_payment_approved
    delivered --> refunded : refund_order

    %% Current places
    class delivered currentPlace

    %% Initial place
    [*] --> pending